--- a/main.html
+++ b/main.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <!-- the entire body must be written by student -->
 
+  <h3>What is the captial of India?</h3>
+
+  <input type="radio" name="capital" value="New Delhi"> New Delhi <br>
+  <input type="radio" name="capital" value="Mumbai"> Mumbai
+
+  <blockquote>
+    New Delhi is the capital of India and an administrative district of NCT Delhi.
+  </blockquote>
+
+  <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
