--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
   <input type="radio" name="capital" value="New Delhi"> New Delhi <br>
   <input type="radio" name="capital" value="Mumbai"> Mumbai
 
-  <blockquote>
+  <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
     New Delhi is the capital of India and an administrative district of NCT Delhi.
   </blockquote>
 
